--- a/HTML/1.什么是HTML？.md
+++ b/HTML/1.什么是HTML？.md
@@ -1,8 +1,6 @@
-                                                                                    **HTML学习总结**
+​                                                                           **HTML学习总结**
 
 [TOC]
-
-
 
 ### 1.什么是HTML？
 
@@ -22,7 +20,7 @@
 
 利用一些编辑器 如VScode新建一个 **后缀名为html** 的文件，如下图所示：
 
-![](image/1.png)
+![](image/.png)
 
 ### 3.HTML 常用知识：
 
