--- a/HTML/1.什么是HTML？.md
+++ b/HTML/1.什么是HTML？.md
@@ -1,4 +1,4 @@
-​                                                                           **HTML学习总结**
+                                                                           **HTML学习总结**
 
 [TOC]
 
@@ -26,7 +26,11 @@
 
 #### 1.HTML元素（elements）
 
-HTML 使用"标记"（markup）来注明文本、图片和其他内容，以便于在浏览器中显示。HTML 标记包含一些规定的"元素"如 `<head>，<title>，<body>，<header>，<footer>，<article>，<section>，<p>，<div>，<span>，<img>，<aside>，<audio>，<canvas>，<d`atalist>，<details>，<embed>，<nav>，<output>，<progress>，<video> 等等。
+HTML 使用"标记"（markup）来注明文本、图片和其他内容，以便于在浏览器中显示。HTML 标记包含一些规定的"元素"
+
+```
+<head>，<title>，<body>，<header>，<footer>，<article>，<section>，<p>，<div>，<span>，<img>，<aside>，<audio>，<canvas>，<datle>，<details>，<embed>，<nav>，<output>，<progress>，<video> 
+```
 
 
 
